--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "dictionary-cli",
+  "version": "0.1.0",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/cheerio": "^0.22.22",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "@yarnpkg/pnpify": "^2.3.1",
     "eslint": "^7.10.0",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "axios": "^0.20.0",
+    "cheerio": "^1.0.0-rc.3"
+  },
+  "dependenciesMeta": {
+    "@types/axios@0.14.0": {
+      "unplugged": true
+    }
   }
 }
