--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
         "outDir": "./dist",
-        "lib": ["ES5", "ES6"],
+        "lib": ["ES5", "ES6", "DOM"],
         "target": "ES6",
         "module": "commonjs",
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "esModuleInterop": true
     },
     "include": ["./src/**/*"]
 }
