--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "sourceMap": true
     },
     "include": ["./src/**/*"]
 }
